--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "run-p serve server",
+    "serve": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "app-shell": "ng run smart-garden:app-shell:production",
     "http-server": "npx http-server -p 8080 -c-1 dist/smart-garden/browser",
-    "app-shell-ci": "ng run smart-garden:app-shell-ci:production"
+    "app-shell-ci": "ng run smart-garden:app-shell-ci:production",
+    "server": "node server.js"
   },
   "private": true,
   "dependencies": {
@@ -40,11 +42,13 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "json-server": "^0.16.1",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
